test/compile_failure/25_dot_on_pointer.c
// EXPECT-ERRORS: 1
// EXPECT: member access requires complete struct type
struct Pair {
    int value;
};

int main() {
    Pair pair = {1};
    Pair *pointer = &pair;
    return pointer.value;
}
